 * add support for 'macosx-autoplay' to the Apple Event / Apple Script bindings
   when adding new inputs - this also affects network streams opened through
   3rd party applications
 * add a UI to the preferences dialog to configure the default application
   handler for ftp, mms, rtmp, rtp, rtsp, sftp, smb and udp streams
   (system-wide settings)
 * The Streaming/Transcoding wizard and the open dialog's output panel are
   deprecated now and will be removed in a future release.

Qt:
 * Partial support for Qt5.0
 * Menus modifications and improvements
 * Playlist improvements and fixes, including PictureFlow view
 * Streaming output wizard rewrite
 * Add bitrate graph in information panels
 * Filters panels improvements, notably Equalizer and Compressor
 * EPG display fixes and improvements
 * Add SD pixmap sources
 * Preferences hotkeys management fixes
 * Display playlist total duration
 * Support for a Maximum volume in the UI
 * Numerous fixes
 * Add audio track fingerprinting from media info
 * Removed language preference
 * New profiles format and dialog to handle filters and quality.
   Added new profiles.

libVLC:
 * new libvlc_audio_output_device_list_get and libvlc_audio_output_device_list_release functions
   to replace the deprecated libvlc_audio_output_device_count, libvlc_audio_output_device_longname
   and libvlc_audio_output_device_id
 * libvlc_audio_output_get_device_type and libvlc_audio_output_set_device_type are now deprecated
 * new libvlc_log_subscribe and libvlc_log_unsubscribe function to register logging callbacks
 * new libvlc_media_tracks_get and libvlc_media_tracks_release methods to get more info about the
   media tracks. libvlc_media_get_tracks_info is now deprecated.
 * new fingerprinter_Create and fingerprinter_Destroy for fingerprinter support.

Removed modules:
 * portaudio audio output: use the native audio output instead
 * X11 On Screen Display notifications (xosd)
 * Linux Framebuffer On Screen Display interface (fbosd)